--- a/final_project/CMakeLists.txt
+++ b/final_project/CMakeLists.txt
@@ -13,4 +13,4 @@ target_sources(app PRIVATE
         
         )
 
-target_include_directories(app PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+zephyr_include_directories(headers)
