--- a/final_project/prj.conf
+++ b/final_project/prj.conf
@@ -2,3 +2,7 @@ CONFIG_I2C=y
 CONFIG_MAIN_STACK_SIZE=2048
 CONFIG_STDOUT_CONSOLE=y
 CONFIG_PRINTK=y
+CONFIG_SERIAL=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_LOG=y
+CONFIG_LOG_DEFAULT_LEVEL=3
