--- a/final_project/prj.conf
+++ b/final_project/prj.conf
@@ -1,8 +1,36 @@
+# --- UART / Serial ---
 CONFIG_SERIAL=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
 CONFIG_UART_CONSOLE=y
 CONFIG_STDOUT_CONSOLE=y
 CONFIG_PRINTK=y
-CONFIG_PM_DEVICE=y           
 CONFIG_UART_STM32=y
+
+# --- Power management ---
+CONFIG_PM_DEVICE=y
+
+# --- Sensors ---
 CONFIG_ADC=y
+CONFIG_I2C=y
+
+# --- Float / printf ---
+CONFIG_NEWLIB_LIBC=y
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
+
+# --- Stack sizes ---
+CONFIG_MAIN_STACK_SIZE=4096
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=2048
+CONFIG_IDLE_STACK_SIZE=512
+
+# --- Thread diagnostics / safety ---
+CONFIG_THREAD_STACK_INFO=y
+CONFIG_STACK_SENTINEL=y
+CONFIG_ASSERT=y
+
+# --- FPU ---
+CONFIG_FPU=y
+
+# --- Logging (опционально) ---
+CONFIG_LOG=y
+CONFIG_LOG_PRINTK=y
+CONFIG_LOG_MODE_IMMEDIATE=y
