--- a/Plant/CMakeLists.txt
+++ b/Plant/CMakeLists.txt
@@ -4,5 +4,7 @@ project(mma8451_test)
 
 target_sources(app PRIVATE 
         src/main.c
-        measure.c
+        measures/rgb.c
+        measures/accelerometer.c
+        measures/temperature.c
         )
