--- a/Plant/prj.conf
+++ b/Plant/prj.conf
@@ -1,5 +1,7 @@
 CONFIG_I2C=y
-CONFIG_MAIN_STACK_SIZE=2048
-CONFIG_STDOUT_CONSOLE=y
+CONFIG_SERIAL=y
 CONFIG_PRINTK=y
+CONFIG_STDOUT_CONSOLE=y
+CONFIG_MAIN_STACK_SIZE=2048
 CONFIG_CBPRINTF_FP_SUPPORT=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
