--- a/Plant/prj.conf
+++ b/Plant/prj.conf
@@ -5,3 +5,5 @@ CONFIG_STDOUT_CONSOLE=y
 CONFIG_MAIN_STACK_SIZE=2048
 CONFIG_CBPRINTF_FP_SUPPORT=y
 CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_ADC=y
+CONFIG_ADC_STM32=y
